# X-Crypter

./: .env.example  .gitignore  CROSS_COMPILE_SETUP.md  GITHUB_SETUP_CHECKLIST.md  README_GITHUB_SETUP.md  SETUP.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: CRYPTER_STEPS.md  GITHUB_ACTIONS_GUIDE.md  GITHUB_QUICK_START.md  GITHUB_SETUP.md  PENDING_FEATURES.md  TODO.md  UPDATE_IMPLEMENTATION_SUMMARY.md  UPDATE_INSTALLATION.md  UPDATE_SYSTEM.md
src/: App.css  App.tsx  RootApp.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: commands.rs  mod.rs  types.rs  user_management.rs
src-tauri/src/crypter/: code_signing.rs  encryptor.rs  key_manager.rs  mod.rs  mutator.rs  obfuscator.rs  pe_reader.rs  resource_manipulation.rs  string_obfuscator.rs  stub_gen.rs  validation.rs
src-tauri/src/crypto/: encryption.rs  mod.rs
src-tauri/src/scanner/: commands.rs
src-tauri/src/storage/: mod.rs  upstash.rs
src-tauri/src/telegram/: bot.rs
src-tauri/src/updater/: commands.rs  download.rs  install.rs  mod.rs  telegram.rs  version.rs  witness.rs
src/components/: AuthScreen.css  AuthScreen.tsx  Controller.css  Controller.tsx  Dashboard.css  Dashboard.tsx  Footer.css  Footer.tsx  ScannerWidget.css  ScannerWidget.tsx  Status.css  Status.tsx  UpdateStatus.css  UpdateStatus.tsx
src/contexts/: EncryptionContext.tsx
src/styles/: index.css
stub/: Cargo.toml
stub/src/: amsi_bypass.rs  anti_dump.rs  api_resolver.rs  api_unhook.rs  cert_pinning_bypass.rs  early_bird.rs  env_manipulation.rs  etw_patch.rs  evasion.rs  heap_encryption.rs  module_stomping.rs  pe_loader.rs  peb_manipulation.rs  persistence.rs  process_doppelganging.rs  process_hollowing.rs  reflective_loader.rs  stack_spoofing.rs  syscalls.rs  thread_hijack.rs  uac_bypass.rs  wdac_bypass.rs
