[package]
name = "x-crypter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "x-crypter"

[lib]
name = "x_crypter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "x-crypter"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "macros", "sqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
hmac = "0.12"
hex = "0.4"
futures-util = "0.3"
zip = "0.1"
bytes = "1.5"
# EXE Crypter dependencies
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }

